k3s/home-server/judge0.yaml
# k3s/home-server/judge0.yaml

apiVersion: v1
kind: Service
metadata:
  name: judge0-server
  namespace: sara
spec:
  selector:
    app: judge0-server
  ports:
    - protocol: TCP
      port: 2358
      targetPort: 2358
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge0-server
  namespace: sara
spec:
  replicas: 3
  selector:
    matchLabels:
      app: judge0-server
  template:
    metadata:
      labels:
        app: judge0-server
    spec:
      hostPID: true
      containers:
        - name: judge0-server
          image: judge0/judge0:1.13.1
          ports:
            - containerPort: 2358
          command: ["/bin/sh", "-c"]
          args: ["export PATH=/wrapper:$PATH && ./scripts/server"]
          securityContext:
            privileged: true
          volumeMounts:
            - name: wrapper-bin
              mountPath: /wrapper
            - name: isolate-data
              mountPath: /var/local/lib/isolate
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "1.5Gi"
              cpu: "2000m"
      volumes:
        - name: wrapper-bin
          emptyDir: {}
        - name: isolate-data
          hostPath:
            path: /home/sara/k3s/judge0-data
            type: DirectoryOrCreate
