k3s/home-server/service-challenges.yaml
# k3s/home-server/service-challenges.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-challenges
  namespace: sara
spec:
  type: ClusterIP
  selector:
    app: service-challenges
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-challenges
  namespace: sara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-challenges
  template:
    metadata:
      labels:
        app: service-challenges
    spec:
      hostAliases:
        - ip: "100.114.58.117"
          hostnames:
            - "ai-server.taild995dd.ts.net"
      containers:
        - name: service-challenges
          image: saramojon/service-challenges:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
