k3s/home-server/service-gamification.yaml
# k3s/home-server/service-gamification.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-gamification
  namespace: sara
spec:
  type: ClusterIP
  selector:
    app: service-gamification
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gamification
  namespace: sara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-gamification
  template:
    metadata:
      labels:
        app: service-gamification
    spec:
      hostAliases:
        - ip: "100.114.58.117"
          hostnames:
            - "ai-server.taild995dd.ts.net"
      containers:
        - name: service-gamification
          image: saramojon/service-gamification:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
