k3s/home-server/service-user.yaml
# k3s/home-server/service-user.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-user
  namespace: sara
spec:
  type: ClusterIP
  selector:
    app: service-user
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
  namespace: sara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
      hostAliases:
        - ip: "100.103.55.77"
          hostnames:
            - "auth.sara.local"
      containers:
        - name: service-user
          image: saramojon/service-user:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "350Mi"
              cpu: "150m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
