k3s/home-server/telegraf-influx-hs.yaml
# k3s/home-server/telegraf-influx-hs.yaml

apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: sara
spec:
  type: LoadBalancer
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: sara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      imagePullSecrets:
        - name: docker-credentials
      containers:
        - name: influxdb
          image: influxdb:1.12-alpine
          ports:
            - containerPort: 8086
          resources:
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb
      volumes:
        - name: influxdb-data
          hostPath:
            path: /home/sara/k3s/influxdb-data
            type: DirectoryOrCreate

---
# ==========================================
# TELEGRAF (DaemonSet)
# ==========================================
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: telegraf
  namespace: sara
spec:
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: telegraf
          image: telegraf:1.38-alpine
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf/telegraf.conf
              subPath: telegraf.conf
            - name: hostfs
              mountPath: /hostfs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: telegraf-config
        - name: hostfs
          hostPath:
            path: /
